--- a/web/src/main.css
+++ b/web/src/main.css
@@ -150,7 +150,7 @@ html, body{
   color: #fff;
   border: 2px #3C24B5 solid;
   border-radius: 3px;
-	visibility: hidden;
+	display:none;
 
 	margin-top: 2em;
   padding: 20px 40px;
