--- a/web/src/main.css
+++ b/web/src/main.css
@@ -47,38 +47,6 @@ table {
 	border-spacing: 0;
 }
 
-@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
-
-html, body{
-	font-family: helvetica, sans-serif;
-	height: 100%;
-	width: 100%;
-	font-family: 'Montserrat', sans-serif;
-
-}
-
-.container{
-	display: table;
-	width: 100%;
-	height: 100vh;
-	text-align: center;
-	font-size: 22px;
-	color: #040404;
-
-	font-size: 48px;
-	background-color: #EEEFF7;
-	line-height: 56px;
-	color: #1C1D21;
-}
-
-.inner{
-	display: table-cell;
-	vertical-align: middle;
-}
-
-.toilet-status{
-	font-weight: 800;
-}
 
 @-webkit-keyframes rotate-forever {
   0% {
@@ -128,6 +96,45 @@ html, body{
     transform: rotate(360deg);
   }
 }
+
+@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
+
+html, body{
+	font-family: helvetica, sans-serif;
+	height: 100%;
+	width: 100%;
+	font-family: 'Montserrat', sans-serif;
+
+}
+
+.container{
+	display: table;
+	width: 100%;
+	height: 100vh;
+	text-align: center;
+	font-size: 22px;
+	color: #040404;
+
+	font-size: 48px;
+	background-color: #EEEFF7;
+	line-height: 56px;
+	color: #1C1D21;
+}
+
+.container .message{
+	font-size: 18px;
+	color: #390C78;
+}
+
+.inner{
+	display: table-cell;
+	vertical-align: middle;
+}
+
+.toilet-status{
+	font-weight: 800;
+}
+
 
 .toilet-status.-loading{
 -webkit-animation-duration: 0.75s;
